<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Read books</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_addBook">Add Book</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUp_text">"Don't have account"</string>
    <string name="login_text">Login</string>
    <string name="email_editText">Email</string>
    <string name="password_editText">Password</string>
    <string name="signUp_button">Register</string>
    <string name="button_addBook">Add Book</string>
    <string name="title_editText">Title</string>
    <string name="author_editText">Author</string>

    <string name="logout_button">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
