<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_backgroundColor"
    android:orientation="vertical"
    tools:context=".ui.books.AddBook">

    <EditText
        android:id="@+id/editText_title"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_editText" />

    <EditText
        android:id="@+id/editText_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/author_editText"/>

    <Button
        android:id="@+id/button_addBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_author"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_addBook"
        tools:text="@string/button_addBook" />

</RelativeLayout>